--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,6 @@ dependencies {
     implementation "com.airbnb.android:epoxy:3.7.0"
     kapt "com.airbnb.android:epoxy-processor:3.7.0"
     implementation "com.airbnb.android:epoxy-databinding:3.7.0"
+
+    implementation 'com.google.android.material:material:1.0.0'
 }
